--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
   "main": "index.js",
   "scripts": {
     "lint": "./node_modules/.bin/eslint src/*.js --bail",
-    "prepush": "npm run lint",
+    "prepush": "npm run  && npm run test:coverage",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "test": "./node_modules/.bin/mocha test/**/*.js"
+    "test": "./node_modules/.bin/mocha test/**/*.js --require babel-register",
+    "test:coverage": "nyc npm test"
+  },
+  "nyc": {
+    "functions": 85,
+    "lines": 85,
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "test/**/*.js"
+    ],
+    "check-coverage": true
   },
   "repository": {
     "type": "git",
@@ -28,6 +41,7 @@
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "clean-webpack-plugin": "^0.1.19",
     "eslint": "^4.19.1",
@@ -36,6 +50,7 @@
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
     "mocha": "^5.2.0",
+    "nyc": "^12.0.2",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
