--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     "eslint-plugin-import": "^2.13.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^0.14.3",
-    "mocha": "^5.2.0",
+    "mocha": "^5.0.1",
+    "node-fetch": "^2.1.2",
     "nyc": "^12.0.2",
+    "sinon": "4.5.0",
+    "sinon-chai": "^3.2.0",
+    "sinon-stub-promise": "^4.0.0",
     "webpack": "^4.16.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
