--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -49,6 +49,9 @@
         "import/newline-after-import": [
             2
         ],
+        "import/order": [
+          0
+        ],
         "import/prefer-default-export": [
             0
         ],
